# data-site-api_20260319

./: .gitignore  README.md  claude.md  index.html  main.py  pyproject.toml
agents/: agent1_catalog.py
css/: shared.css
docs/: api_architecture.md  catalog.md
japan-stats-site/: bundle.html  index.html  package.json  tsconfig.app.json
japan-stats-site/src/: App.css  App.tsx  index.css
js/: shared.js
notebooks/: analysis.ipynb  analysis.py
pages/: cloud-accounting.html  explorer.html  income.html  life.html  medical.html  npo.html  politics.html  population.html
site/: index.html
site/css/: shared.css
site/js/: shared.js
site/pages/: explorer.html  income.html  life.html  medical.html  npo.html  politics.html  population.html
src/js/: additional-data.js  data-service.js  estat-api.js  static-data.js
tmp/: test_api.py
レポート/: README.md
レポート/html-report/: index.html
