[project]
name = "japan-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=7.2.0",
    "html5lib>=1.1",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
    "xlrd>=2.0.2",
]
